# cn-graphrag-eval-opt

./: .env.example  .gitignore  LICENSE  NOTICE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.toml
docs/: architecture.md  experiments.md  references.md  resume-framing.md
docs/superpowers/plans/: 2026-06-08-cn-graphrag-eval-opt-competitive-upgrade.md  2026-06-08-cn-graphrag-eval-opt.md
docs/superpowers/specs/: 2026-06-08-cn-graphrag-eval-opt-design.md
examples/: qa.jsonl
examples/benchmarks/medium_enterprise/: qa.jsonl
examples/benchmarks/medium_enterprise/corpus/: change_management.md  data_governance.md  finance_close.md  legal_review.md  logistics.md  onboarding.md  risk_management.md  sales_contract.md  security_audit.md  vendor_management.md
examples/benchmarks/multi_hop_enterprise/: qa.jsonl
examples/benchmarks/multi_hop_enterprise/corpus/: contract_review.md  data_processing.md  incident_reporting.md  payment_control.md  supplier_onboarding.md  system_access.md
examples/benchmarks/noisy_enterprise/: qa.jsonl
examples/benchmarks/noisy_enterprise/corpus/: distractor_customer.md  distractor_permissions.md  distractor_release.md  relevant_access.md  relevant_privacy.md  relevant_release.md
examples/benchmarks/scale_enterprise/: qa.jsonl
examples/benchmarks/scale_enterprise/corpus/: asset_lifecycle.md  business_continuity.md  customer_privacy.md  devops_release.md  expense_audit.md  knowledge_base.md  meeting_governance.md  partner_access.md  product_quality.md  remote_work.md  training_compliance.md  travel_security.md
examples/benchmarks/small_enterprise/: qa.jsonl
examples/benchmarks/vertical_industry/: qa.jsonl
examples/corpus/: expense_policy.md  hr_onboarding.md  security_access.md
src/cn_graphrag_eval_opt/: __init__.py  __main__.py  adapters.py  api.py  chunking.py  cli.py  config.py  connectors.py  corpus.py  datasets.py  diagnostics.py  embeddings.py  evaluation.py  evaluator_adapters.py  fusion.py  graph.py  incremental.py  llm.py  models.py  optimization.py  pipeline.py  provenance.py  providers.py  reporting.py  retrieval.py  service.py  storage.py  stores.py  text.py
tests/: test_benchmarks.py  test_chunking.py  test_cli_output.py  test_connectors.py  test_diagnostics.py  test_documentation.py  test_evaluator_adapters.py  test_fusion.py  test_incremental_index.py  test_llm_cli.py  test_llm_config.py  test_llm_runtime.py  test_pipeline.py  test_project_upgrade.py  test_provenance.py  test_providers.py  test_quality_gate_cli.py  test_service_api.py  test_service_llm.py  test_stores.py
(+9 files in other folders)
